--- a/smrc/src/App.css
+++ b/smrc/src/App.css
@@ -1,38 +1,14 @@
-.App {
-  text-align: center;
-}
+:root {
+    --background-color: #1E1E1E;
+    --navbar-color: #2C2F33;
+    --navbar-hover: #40444B;
+    --border-color: #4F545C;
+    --navbar-active: #B84730;
+    
+    --text-color: #E4E6EB;
+    --text-hover: #B0B3B8;
+    --text-active: #D65A31;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    --button-color: #A33D2E;
+    --button-hover: #D65A31;
 }
