--- a/smrc/src/Login/login.css
+++ b/smrc/src/Login/login.css
@@ -4,20 +4,28 @@
     justify-content: center;
     flex-direction: column;
     padding: 30px;
-    gap: 10px;
+    gap: 20px;
 }
 
 form>input {
     width: 300px;
     height: 30px;
     font-size: 20px;
-    border: 2px solid #113b2d;
+    border: 2px solid var(--border-color);
     border-radius: 5px;
 }
 
 form>button {
     width: 100px;
     height: 30px;
-    background-color: #9cf7db;
-    border: 2px solid #113b2d;
+    background-color: var(--border-color);
+    border: 2px solid var(--border-color);
+    border-radius: 5px;
+    color: var(--text-color);
+}
+
+form>button:hover {
+    border-color: var(--navbar-hover);
+    color: var(--text-hover);
+    cursor: pointer;
 }
