--- a/smrc/src/App.css
+++ b/smrc/src/App.css
@@ -12,3 +12,12 @@
     --button-color: #A33D2E;
     --button-hover: #D65A31;
 }
+
+html {
+    background-color: var(--background-color);
+}
+
+#root>div {
+    height: 100%;
+    width: 100%;
+}
