--- a/smrc/src/Pages/Home/home.css
+++ b/smrc/src/Pages/Home/home.css
@@ -1,6 +1,6 @@
 .home-container {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: var(--background-color);
     overflow: hidden;
     display: flex;
