--- a/smrc/src/privateRoute.css
+++ b/smrc/src/privateRoute.css
@@ -1,8 +1,8 @@
 .navbar {
-    position: absolute;
+    position: sticky;
+    top: 0;
     display: flex;
     flex-direction: row;
-    width: 100vw;
     justify-content: center;
     align-items: center;
     background-color: var(--navbar-color);
@@ -35,11 +35,18 @@
 }
 
 .background {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background: var(--background-color);
 }
 
-.background>div {
-    padding-top: 50px;
+.navbar.small {
+    display: none;
+}
+
+@media(max-width: 950px) {
+    .navbar>div {
+        padding-left: 12px;
+        padding-right: 12px;
+    }
 }
