--- a/smrc/src/Pages/Home/home.scss
+++ b/smrc/src/Pages/Home/home.scss
@@ -1,6 +1,6 @@
 .home-container {
     width: 100%;
-    height: 100%;
+    height: 100vh !important;
     background-color: var(--background-color);
     overflow: hidden;
     display: flex;
