--- a/smrc/src/Pages/Admin/admin.scss
+++ b/smrc/src/Pages/Admin/admin.scss
@@ -32,7 +32,69 @@
         padding: 15px;
         display: flex;
         flex-direction: column;
-        gap: 15px;
         color: var(--text-color);
+    }
+
+    .modal-content {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: var(--navbar-color);
+        border: 3px solid var(--text-active);
+        padding: 10px 32px 32px 32px;
+        border-radius: 5px;
+        width: 70%;
+        max-width: 350px;
+    }
+
+    @media(max-width: 500px) {
+        .modal-content>h2 {
+            font-size: 21px;
+        }
+    }
+
+    .modal-button {
+        font-size: 16px;
+        background-color: var(--navbar-active);
+        border: none;
+        color: white;
+        margin-right: 10px;
+        padding: 8px;
+        border-radius: 3px;
+    }
+
+    .modal-button:disabled {
+        color: rgba(16, 16, 16, 0.3);
+    }
+
+    .modal-button:enabled:hover {
+        background-color: var(--button-hover);
+        cursor: pointer;
+    }
+
+    .checkbox-form {
+        font-size: 14px !important;
+    }
+
+    .table-button {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+
+    table, th, td {
+        border: 1px solid black;
+        border-collapse: collapse;
+        padding: 5px;
+    }
+
+    thead {
+        font-size: 24px;
+        font-weight: 500;
+    }
+
+    tbody {
+        font-size: 16px;
     }
 }
