--- a/src/Pages/Dashboard/dashboard.scss
+++ b/src/Pages/Dashboard/dashboard.scss
@@ -1,3 +1,52 @@
-Dashboard {
-    
+.dashboard-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+    .content {
+        width: 90%;
+        max-width: 1000px;
+        color: white;
+        border-radius: 5px;
+    }
+
+    .header-content {
+        position: sticky;
+        top: 50px;
+        background-color: var(--navbar-color);
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        font-weight: 500;
+    }
+
+    .header-text {
+        padding: 15px;
+        line-height: 35px;
+        font-size: 35px;
+    }
+
+    .body-content {
+        background-color: var(--navbar-hover);
+        color: black;
+        padding: 15px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
+        color: var(--text-color);
+    }
+
+    @media(max-width: 950px) {
+        .header-content {
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .header-text {
+            font-size: 18px;
+            line-height: 18px;
+            padding: 8px;
+        }
+    }
 }
