--- a/src/Pages/Recaps/recaps-modal.scss
+++ b/src/Pages/Recaps/recaps-modal.scss
@@ -72,4 +72,18 @@
         background-color: var(--button-hover);
         cursor: pointer;
     }
+
+    @media(max-width: 950px) {
+        .add-recap-button {
+            font-size: 10px;
+            padding: 4px;
+        }
+
+        .add-recap-button {
+            position: relative;
+            top: 0;
+            left: 0;
+            margin-bottom: 8px;
+        }
+    }
 }
