RFG working on FE

--- a/src/Pages/RFG/rfg-modal-convert.scss
+++ b/src/Pages/RFG/rfg-modal-convert.scss
@@ -73,7 +73,8 @@
         cursor: pointer;
     }
 
-    .pr-checkbox {
+    .pr-checkbox,
+    .apr-checkbox {
         width: fit-content;
     }
 
